# Hackathon-hanoi

./: .dockerignore  .gitignore  BUSINESS_README.md  SOLUTION_README.md  TECHNIQUE_README.md  test.md
be1/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
be1/app/: adaptive_api.py  adaptive_ontology.py  be2_client.py  budget.py  catalog.py  catalog_normalizer.py  config.py  decision_gap.py  filtering.py  fulfillment.py  graph.py  judge.py  llm.py  llm_compat.py  main.py  ontology.py  ontology_stub.py  product_repo.py  profile_compiler.py  rag.py  schemas.py  scoring.py  session_history.py  tools.py  tracing.py  turnlog.py
be1/app/auth/: __init__.py  cookies.py  dependencies.py  exceptions.py  handlers.py  otp_provider.py  phone.py  router.py  schemas.py  security.py  service.py
be1/app/chat/: __init__.py  dependencies.py  exceptions.py  handlers.py  router.py  runtime.py  schemas.py  service.py
be1/app/repositories/: __init__.py  auth_sessions.py  chat_sessions.py  login_attempts.py  otp_challenges.py  users.py
be1/data/: adaptive_profiles.json  prototype_regions.json  runtime_profiles.json
be1/data_ingest/: README.md  ingest.sh  ingest_products.py
be1/db/: __init__.py  elasticsearch.py  models.py  postgres.py  qdrant.py
be1/docker/: .env.docker  docker-compose.yml  ngrok.tunnels.yml
be1/docker/apps/: elasticsearch.yml  postgres.yml  qdrant.yml
be1/eval/: README.md  persona_scenarios.jsonl  scenarios.jsonl
be1/fixtures/: ban_ui_ontology_samples.json  may_lanh.json
be1/migrations/: README  env.py  script.py.mako
be1/scripts/: build_policy_index.py  eval_personas.py  eval_run.py  judge_batch.py  make_fixture.py  prewarm_runtime_profiles.py  smoke.py  test_catalog_normalizer.py
be1/tests/: __init__.py  test_adaptive_ontology.py  test_auth_api.py  test_auth_security.py  test_auth_service.py  test_chat_sessions_api.py  test_session_history.py
data/: ontology_data.json
data-generator/: README.md  main.py  product_catalog.json  pyproject.toml
data-generator/configs/: data-issue.yaml
data-generator/docs/: plan.md  product_catalog_schema_clean.json
data-generator/tests/: test_generator.py  test_schema_reader.py
deploy/: README.md  (+4 more)
(+48 files in other folders)
