[project]
name = "be1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "phonenumbers>=9.0.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.5",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
