[project]
name = "data-generator"
version = "0.1.0"
description = "Generate reproducible synthetic retail datasets and user interactions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5,<3",
    "pyyaml>=6.0.3,<7",
]

[project.scripts]
synthetic-retail-generator = "synthetic_retail_generator.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synthetic_retail_generator"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
